// TODO: All
syntax = "proto2";

package multiconnect.local.transfer;

message L9TransferFile {
  required uint32 id = 1;
  required string target = 2;
  required string file_path = 3;
}

message L10TransferProgress {
  required uint32 id = 1;
  required string uuid = 2;
  required string file_name = 3;
  required uint64 total = 4;
  required uint64 done = 5;
  required Direction direction = 6;

  enum Direction {
    INBOUND = 0;
    OUTBOUND = 1;
  }
}

message L11TransferStatus {
  required uint32 id = 1;
  required string uuid = 2;
  required LTStatus status = 3;

  enum LTStatus {
    OK = 0;
    MALFORMED_PACKET = 1;
    WRONG_SIG = 2;
    WAITING = 3;
    PREPARING = 4;
    VALIDATING = 5;
    TRANSFERING = 6;
  }
}
